Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23279

main.named_pipe test timeouts if called twice in a row

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 10.5(EOL)
    • 10.5.7
    • Tests, MTR
    • None
    • Windows 10 1809 64-bit, in a virtual machine (virt-manager)

    Description

      While trying to locally reproduce intermittent failures of main.named_pipe which happened a number of times on "windows-1809" CI worker, I found that if main.named_pipe is called twice in a row, second test instance hangs. If tests are executed in parallel with N workers, it's possible to execute N instances of the main.named_pipe without failure. Then N+1 instance is scheduled on a worker that executed an instance of main.named_pipe before, and it hangs.

      git state: 92014bd1c611fd27c487bcc47a7521baa435214c

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            rinat.ibragimov Rinat Ibragimov (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.