MDEV-23279 main.named_pipe test timeouts if called twice in a row

The test timeouts, because mtr is waiting for pid file.
The pid file is not there, because expected to fail mysqld startup
(duplicate named pipe name), this startup removed pid file of the running
mysqld instance.

To fix, split handle_connections_win() into the initialization part,
and  accept/handle part, like it is done elsewhere.

The initialization part runs before pid file handling, and aborts on errors
, thus avoiding pid file overwrites.